--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
