--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,13 @@ button {
   border: none;
 }
 
+.mide-text {
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
 .app-comic {
   width: 100%;
   height: 100%;
