--- a/src/components/tutorial/index.scss
+++ b/src/components/tutorial/index.scss
@@ -64,7 +64,7 @@
   height: 40px;
 
   position: absolute;
-  bottom: 2%;
+  bottom: 1%;
   left: 50%;
   transform: translate(-50%, 0);
 
@@ -151,5 +151,33 @@
   position: absolute;
   left: 68%;
   top: 50%;
+  transform: translate(-50%, 0);
+}
+
+.tutorial-arrow-navigator {
+  width: 26%;
+  height: auto;
+
+  position: absolute;
+  top: 74%;
+  left: 54%;
+  z-index: 200;
+}
+
+.tutorial-navigator-text {
+  width: 34%;
+  text-align: center;
+  font-size: 2em;
+
+  position: absolute;
+  left: 48%;
+  top: 64%;
+  transform: translate(-50%, 0);
+}
+
+.go-to-comic {
+  position: absolute;
+  top: 40%;
+  left: 50%;
   transform: translate(-50%, 0);
 }
