--- a/src/components/shared/AppBar.scss
+++ b/src/components/shared/AppBar.scss
@@ -17,13 +17,17 @@
   height: 72px;
   padding: 0 3%;
 
-  display: flex;  
+  display: flex;
   align-items: center;
   justify-content: space-between;
 
   position: absolute;
 
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.58) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0.48) 100%
+  );
   transition: top 0.4s ease;
 
   &.hidden {
@@ -35,20 +39,19 @@
   }
 }
 
+.app-bar-btn > img {
+  width: 100%;
+  height: auto;
+}
+
 .app-bar-sound-btn {
   width: 56px;
+}
 
-  > img {
-    width: 100%;
-    height: auto;
-  }
+.app-bar-navigator-btn {
+  width: 44px;
 }
 
 .app-bar-menu-btn {
-  width: 40px;
-
-  > img {
-    width: 100%;
-    height: auto;
-  }
+  width: 44px;
 }
