--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@ button {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .app-comic,
