--- a/src/components/shared/AppBar.scss
+++ b/src/components/shared/AppBar.scss
@@ -28,7 +28,7 @@
     rgba(0, 0, 0, 0.8) 0%,
     rgba(0, 0, 0, 0.48) 100%
   );
-  transition: top 0.4s ease;
+  transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 
   &.hidden {
     top: -72px;
