--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -1,6 +1,6 @@
-.front-page {
-  width: 100%;
-  height: 100%;
+.home-page {
+  width: 100vw;
+  height: 100vh;
   background: linear-gradient(180deg, #000000 0%, #506036 100%);
 
   > * {
@@ -47,7 +47,7 @@
   align-items: center;
   justify-content: center;
 
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
   box-sizing: border-box;
   border-radius: 29px;
 
