--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,10 @@
-// Variables
-$md-breakpoint: 1440px;
-$l-breakpoint: 1441px;
+// Breakpoints
+$xs-up: 639px;
+
+$sm-down: 649px;
+$sm-up: 1439px;
+
+$md-down: 1440px;
+$md-up: 1919px;
+
+$lg-down: 1920px;
