--- a/src/components/shared/AppBar.scss
+++ b/src/components/shared/AppBar.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables.scss';
+
 .app-bar {
   width: 100%;
   height: 72px;
@@ -5,6 +7,10 @@
   top: 0;
   left: 0;
   z-index: 100;
+
+  @media screen and (max-width: $md-down) {
+    height: 64px;
+  }
 }
 
 .app-bar-reveal-area {
@@ -25,10 +31,23 @@
 
   background: linear-gradient(
     180deg,
-    rgba(0, 0, 0, 0.8) 0%,
-    rgba(0, 0, 0, 0.48) 100%
+    #000000 0%,
+    rgba(0, 0, 0, 0) 116.67%
   );
   transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+
+  @media screen and (max-width: $md-down) {
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.8) 0%,
+      #000000 116.67%
+    );
+    height: 64px;
+  }
+
+  @media screen and (max-width: $sm-down) {
+    height: 44px;
+  }
 
   &.hidden {
     top: -72px;
