Add icon buttons

--- a/src/components/shared/AppBar.scss
+++ b/src/components/shared/AppBar.scss
@@ -58,19 +58,6 @@
   }
 }
 
-.app-bar-btn > img {
-  width: 100%;
-  height: auto;
-}
-
-.app-bar-sound-btn {
-  width: 56px;
-}
-
-.app-bar-navigator-btn {
-  width: 44px;
-}
-
-.app-bar-menu-btn {
-  width: 44px;
+.app-bar-sound-btn > svg {
+  width: 43px;
 }
