--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -25,8 +25,13 @@
     height: auto;
   }
 
+  @media screen and (max-width: $sm-up) {
+    max-width: 380px;
+    top: 4%;
+  }
+
   @media screen and (max-width: $xs-up) {
-    top: 10%;
+    top: 8%;
   }
 }
 
@@ -34,13 +39,18 @@
   width: 75%;
   max-width: 514px;
   font-size: 1.875em;
-  line-height: 1.257;
+  line-height: 1.44;
   top: 20%;
   text-align: center;
 
+  @media screen and (max-width: $sm-up) {
+    max-width: 268px;
+    font-size: 1.15em;
+    top: 6%;
+  }
+
   @media screen and (max-width: $xs-up) {
     font-size: 1.15em;
-    line-height: 1.44;
     top: 14%;
   }
 }
@@ -83,6 +93,11 @@
     height: auto;
   }
 
+  @media screen and (max-width: $sm-up) {
+    max-width: 100px;
+    top: 10%;
+  }
+
   @media screen and (max-width: $xs-up) {
     top: 40%;
   }
@@ -108,7 +123,13 @@
   max-width: 212px;
   top: 34%;
 
-  @media screen and (max-width: $sm-down) {
+  @media screen and (max-width: $sm-up) {
+    width: 48%;
+    max-width: unset;
+    top: 16%;
+  }
+
+  @media screen and (max-width: $xs-up) {
     width: 84%;
     max-width: unset;
     top: 20%;
