--- a/src/components/tutorial/index.scss
+++ b/src/components/tutorial/index.scss
@@ -8,7 +8,10 @@
     max-width: 100%;
     max-height: 100%;
     display: block;
-    margin: 0 auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -22,6 +25,11 @@
   left: 50%;
   top: 10%;
   transform: translate(-50%, 0);
+
+  @media screen and (max-width: $sm-up) {
+    font-size: 1em;
+    top: 22%;
+  }
 }
 
 .tutorial-content,
@@ -72,6 +80,10 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+
+  @media screen and (max-width: $sm-up) {
+    width: 100px;
+  }
 }
 
 .tutorial-step-nav {
@@ -85,6 +97,11 @@
     transform: scale(1.25);
     background: #c4c4c4;
   }
+
+  @media screen and (max-width: $sm-up) {
+    width: 8px;
+    height: 8px;
+  }
 }
 
 .tutorial-arrow {
@@ -92,7 +109,7 @@
   height: auto;
 
   position: absolute;
-  top: 48%;
+  top: 50%;
 
   &.left {
     left: 9%;
@@ -112,6 +129,11 @@
   left: 50%;
   top: 52%;
   transform: translate(-50%, 0);
+
+  @media screen and (max-width: $sm-up) {
+    font-size: 1em;
+    top: 50%;
+  }
 }
 
 .tutorial-arrow-sound {
@@ -127,6 +149,12 @@
     width: 14%;
     left: 6.5%;
   }
+
+  @media screen and (max-width: $sm-up) {
+    width: 22%;
+    left: 14%;
+    top: 6%;
+  }
 }
 
 .tutorial-sound-text {
@@ -141,6 +169,13 @@
   @media screen and (min-width: $lg-down) {
     left: 22%;
   }
+
+  @media screen and (max-width: $sm-up) {
+    font-size: 1em;
+    width: 25%;
+    top: 46%;
+    left: 36%;
+  }
 }
 
 .tutorial-arrow-menu {
@@ -154,6 +189,11 @@
 
   @media screen and (min-width: $lg-down) {
     width: 20%;
+  }
+
+  @media screen and (max-width: $sm-up) {
+    top: 16%;
+    right: 5%;
   }
 }
 
@@ -172,6 +212,12 @@
     right: -4%;
     top: 46%;
   }
+
+  @media screen and (max-width: $sm-up) {
+    font-size: 1em;
+    top: 66%;
+    right: 4%;
+  }
 }
 
 .tutorial-arrow-navigator {
@@ -185,6 +231,11 @@
 
   @media screen and (min-width: $lg-down) {
     width: 16%;
+  }
+
+  @media screen and (max-width: $sm-up) {
+    width: 24%;
+    top: 6%;
   }
 }
 
@@ -201,6 +252,13 @@
   @media screen and (min-width: $lg-down) {
     width: 26%;
   }
+
+  @media screen and (max-width: $sm-up) {
+    width: 40%;
+    font-size: 1em;
+    line-height: 1.25;
+    top: 30%;
+  }
 }
 
 .tutorial-navigator .comic-navigator {
@@ -212,4 +270,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  @media screen and (max-width: $sm-up) {
+    top: 74%;
+  }
 }
