--- a/src/components/content/index.scss
+++ b/src/components/content/index.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables.scss';
+
 .comic-content {
   width: 100vw;
   height: 100vh;
@@ -11,16 +13,34 @@
 .comic-content-title,
 .comic-content-search,
 .comic-content-grid {
-  width: 92%;
-  max-width: 1350px;
+  width: 90%;
+  max-width: 1330px;
   position: relative;
   margin: 0 auto;
+}
+
+.comic-content-search {
+  margin-bottom: 40px;
+
+  @media screen and (max-width: $sm-up) {
+    margin-bottom: 10px;
+  }
+
+  @media screen and (max-width: $xs-up) {
+    margin-bottom: 6px;
+  }
 }
 
 .comic-content-title span {
   display: block;
   font-size: 3.75em;
   margin: 40px 0;
+
+  @media screen and (max-width: $sm-up) {
+    font-size: 1.875em;
+    margin: 16px 0;
+    text-align: center;
+  }
 }
 
 .comic-content-input {
@@ -33,46 +53,66 @@
   margin-bottom: 20px;
   padding-left: 22px;
   font-size: 1.5em;
+
+  @media screen and (max-width: $sm-up) {
+    height: 32px;
+    font-size: 1em;
+    margin-bottom: 6px;
+  }
+}
+
+.comic-content-search .mide-text {
+  @media screen and (max-width: $sm-up) {
+    font-size: 0.85em;
+  }
 }
 
 .comic-content-grid {
   overflow-y: scroll;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 6.5em;
+  row-gap: 6.5em;
+  margin-bottom: 14px;
 
-  .comic-grid-row {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin: 104px 0;
+  @media screen and (max-width: $sm-up) {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2.75em;
+    row-gap: 2.75em;
+  }
 
-    .comic-grid-card {
-      width: calc(100% / 3);
-      max-width: 372px;
-      position: relative;
+  @media screen and (max-width: $xs-up) {
+    grid-template-columns: 1fr;
+    column-gap: 0;
+    row-gap: 1em;
+  }
 
-      img {
-        width: 100%;
-        height: auto;
-      }
+  .comic-grid-card {
+    position: relative;
 
-      .comic-grid-card-index {
-        width: 100%;
-        height: 48px;
-        background: linear-gradient(
-          180deg,
-          rgba(0, 0, 0, 0.6) 0%,
-          #000000 100%
-        );
+    > img {
+      width: 100%;
+      height: auto;
+    }
 
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
+    .comic-grid-card-index {
+      width: 100%;
+      height: 48px;
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.6) 0%,
+        #000000 100%
+      );
 
-        span {
-          font-size: 1.875em;
-          margin-left: 8px;
-        }
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+
+      span {
+        font-size: 1.875em;
+        margin-left: 8px;
       }
     }
   }
