--- a/src/components/shared/SideMenu.scss
+++ b/src/components/shared/SideMenu.scss
@@ -26,23 +26,25 @@
 }
 
 .side-menu-content {
+  width: 100%;
   padding-top: 14vh;
 
   @media screen and (max-width: $sm-up) {
+    padding-top: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  @media screen and (max-width: $xs-up) {
     padding-top: 4vh;
   }
 }
 
 .side-menu-close-btn {
-  width: 44px;
   position: absolute;
   top: 22px;
   right: 36px;
-
-  > img {
-    width: 100%;
-    height: auto;
-  }
 }
 
 .side-menu-list {
@@ -56,6 +58,11 @@
     margin: 48px 0;
 
     @media screen and (max-width: $sm-up) {
+      font-size: 1.85em;
+      margin: 34px 0;
+    }
+
+    @media screen and (max-width: $xs-up) {
       font-size: 2.25em;
       margin: 56px 0;
     }
