Adjust home screen

--- a/src/components/about/index.scss
+++ b/src/components/about/index.scss
@@ -22,11 +22,11 @@
   font-size: 3.75em;
   margin-top: 40px;
 
-  @media screen and (max-width: $sm-up) {
-    font-size: 1.875em;
-    margin-top: 18px;
-    text-align: center;
-  }
+  // @media screen and (max-width: $sm-up) {
+  //   font-size: 1.875em;
+  //   margin-top: 18px;
+  //   text-align: center;
+  // }
 }
 
 .about-content {
@@ -38,40 +38,40 @@
   grid-auto-flow: column;
   grid-template-rows: repeat(5, 76px);
 
-  @media screen and (max-width: $sm-up) {
-    margin-top: 12px;
-    margin-bottom: 4px;
-    text-align: center;
-    grid-template-rows: repeat(4, 50px);
-    grid-template-columns: repeat(3, 1fr);
-  }
+  // @media screen and (max-width: $sm-up) {
+  //   margin-top: 12px;
+  //   margin-bottom: 4px;
+  //   text-align: center;
+  //   grid-template-rows: repeat(4, 50px);
+  //   grid-template-columns: repeat(3, 1fr);
+  // }
 
-  @media screen and (max-width: $xs-up) {
-    display: block;
-    margin-top: 20px;
-  }
+  // @media screen and (max-width: $xs-up) {
+  //   display: block;
+  //   margin-top: 20px;
+  // }
 }
 
 .about-content-item {
   line-height: 1.5;
   margin: 0;
 
-  @media screen and (max-width: $xs-up) {
-    margin: 10px 0;
-  }
+  // @media screen and (max-width: $xs-up) {
+  //   margin: 10px 0;
+  // }
 
   .about-content-title,
   .about-content-subtitle {
     font-size: 1em;
 
-    @media screen and (max-width: $sm-up) {
-      font-size: 0.625em;
-      line-height: 1.25;
-    }
+    // @media screen and (max-width: $sm-up) {
+    //   font-size: 0.625em;
+    //   line-height: 1.25;
+    // }
 
-    @media screen and (max-width: $xs-up) {
-      font-size: 0.7em;
-    }
+    // @media screen and (max-width: $xs-up) {
+    //   font-size: 0.7em;
+    // }
   }
 
   .about-content-title.mide-text {
@@ -92,17 +92,17 @@
     height: 100%;
   }
 
-  @media screen and (max-width: $sm-up) {
-    height: 30px;
-    margin: 0;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
+  // @media screen and (max-width: $sm-up) {
+  //   height: 30px;
+  //   margin: 0;
+  //   position: absolute;
+  //   top: 80%;
+  //   left: 50%;
+  //   transform: translate(-50%, 0);
+  // }
 
-  @media screen and (max-width: $xs-up) {
-    height: 38px;
-    top: 86%;
-  }
+  // @media screen and (max-width: $xs-up) {
+  //   height: 38px;
+  //   top: 86%;
+  // }
 }
