--- a/src/components/shared/AppBar.scss
+++ b/src/components/shared/AppBar.scss
@@ -8,9 +8,9 @@
   left: 0;
   z-index: 100;
 
-  @media screen and (max-width: $md-down) {
-    height: 64px;
-  }
+  // @media screen and (max-width: $md-down) {
+  //   height: 64px;
+  // }
 }
 
 .app-bar-reveal-area {
@@ -36,18 +36,18 @@
   );
   transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 
-  @media screen and (max-width: $md-down) {
-    background: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0.8) 0%,
-      #000000 116.67%
-    );
-    height: 64px;
-  }
+  // @media screen and (max-width: $md-down) {
+  //   background: linear-gradient(
+  //     180deg,
+  //     rgba(0, 0, 0, 0.8) 0%,
+  //     #000000 116.67%
+  //   );
+  //   height: 64px;
+  // }
 
-  @media screen and (max-width: $sm-down) {
-    height: 44px;
-  }
+  // @media screen and (max-width: $sm-down) {
+  //   height: 44px;
+  // }
 
   &.hidden {
     top: -72px;
