--- a/src/components/shared/ComicControls.scss
+++ b/src/components/shared/ComicControls.scss
@@ -19,9 +19,9 @@
     width: 80px;
     height: auto;
 
-    @media screen and (max-width: $sm-up) {
-      width: 30px;
-    }
+    // @media screen and (max-width: $sm-up) {
+    //   width: 30px;
+    // }
   }
 }
 
